# Lattice_QCD

./: CMakeLists.txt  README.md  requirements.txt  results.csv  to_do
Old_heatbath_ising/: CMakeLists.txt  io.cpp  magnetization.h  run_simulation_parallel.cpp
SIMD_Example/: vectorized_add.cpp
data/: params.csv  results.csv
grid/: Action.h  ArrayOpOverloads.h  CMakeLists.txt  ColorMatrix.h  Expression.h  GaugeField.h  Grid.cpp  Grid.h  HMC.h  HMC_gauge.h  Lattice.h  Observables.h  RNG.h  Reductions.h  Repro.cpp  ScalarField.h  Stencil.h  VectorField.h  io.cpp  pragma_shorts.h  run_sim.cpp  run_sim_gauge.cpp  tests.cpp
grid/Actions/: Action.h
grid/Fields/: FieldBase.h  SU2Field.h  ScalarField.h  U1Field.h
grid/HMC/: HMC.h  HMC_gauge.h
grid/Integrators/: LeapFrog.h
grid/Lattice/: Expression.h  Lattice.h
grid/Observables/: AvgPlaquette.h  Magnetization.h  ObservableBase.h
grid/RNG/: RNG.h
grid/Shifting/: Shifting.h
grid/Stencil/: Stencil.h
grid/openmp/: Reductions.h  pragma_shorts.h
grid/simd/: CMakeLists.txt  CMatOverloads.h  LinkOverloads.h  SimdFieldTypes.h  simd_test.cpp  simd_types.h
notebooks/: Gauge_Results.ipynb  Phi4_Results.ipynb  Sample_Results.ipynb  Untitled.ipynb  phi^4 Results Scratch.ipynb
old_heatbath_ising/: CMakeLists.txt  test.cpp
scratch/: GaugeField.h  VectorField.h  main_scratch.cpp  statistics.cpp
src/: CMakeLists.txt  energy.h  io.cpp  io.h  lattice.cpp  lattice.h  magnetization.h  run_simulation.cpp  run_simulation_parallel.cpp  statistics.cpp
stored_data/burn_in/: burn_in_epsilon_0.01_sigma_0.5.csv  burn_in_epsilon_0.01_sigma_1.csv  burn_in_epsilon_0.1_sigma_0.5.csv  burn_in_epsilon_0.1_sigma_1.csv
stored_data/phases/: 5x5.csv  5x5x5.csv
temp_data/: actual_results_burn_in.csv  burn_in.csv  converge_zero_vev.csv  input_params.csv  params.csv  results.csv  results_burn_in.csv  results_scan.csv  scan.csv  scan3.csv  scan4.csv  scan5.csv  scan6.csv  scan7.csv  single_params.csv  tunneling.csv
temp_data/Gauge/: burn_in.csv  input_params.csv  phases_check.csv
