# https://www.jetbrains.com/help/clion/quick-cmake-tutorial.html?_gl=1%2Aqt5ceh%2A_gcl_au%2ANjIxNTQ3MzAzLjE3NjE4ODkzMzc.%2AFPAU%2ANjIxNTQ3MzAzLjE3NjE4ODkzMzc.%2A_ga%2AMjEzMTgwNzc3NS4xNzYxODg5MzM3%2A_ga_9J976DJZ68%2AczE3NjE4ODkzMzQkbzEkZzAkdDE3NjE4ODkzMzQkajYwJGwwJGgw#seealso

cmake_minimum_required(VERSION 3.28)
project(Lattice_QCD VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)

#add_executable(run_simulation
#        old_heatbath_ising/run_simulation_parallel.cpp
#        old_heatbath_ising/lattice.h
#        old_heatbath_ising/energy.h
#        old_heatbath_ising/magnetization.h
#        old_heatbath_ising/io.cpp
#        old_heatbath_ising/io.h
#        SIMD_Example/vectorized_add.cpp
#        grid_test/Repro.cpp
#        grid_test/Grid.cpp
#        grid_test/Grid.h
#)

#add_executable(test
#        old_heatbath_ising/test.cpp
#        old_heatbath_ising/lattice.h
#        old_heatbath_ising/energy.h
#        old_heatbath_ising/magnetization.h
#        old_heatbath_ising/io.cpp
#        old_heatbath_ising/io.h
#)

