# https://www.jetbrains.com/help/clion/quick-cmake-tutorial.html?_gl=1%2Aqt5ceh%2A_gcl_au%2ANjIxNTQ3MzAzLjE3NjE4ODkzMzc.%2AFPAU%2ANjIxNTQ3MzAzLjE3NjE4ODkzMzc.%2A_ga%2AMjEzMTgwNzc3NS4xNzYxODg5MzM3%2A_ga_9J976DJZ68%2AczE3NjE4ODkzMzQkbzEkZzAkdDE3NjE4ODkzMzQkajYwJGwwJGgw#seealso

cmake_minimum_required(VERSION 3.28)
project(Lattice_QCD VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)

#add_executable(run_simulation
#        src/run_simulation_parallel.cpp
#        src/lattice.h
#        src/energy.h
#        src/magnetization.h
#        src/io.cpp
#        src/io.h
#        SIMD_Example/vectorized_add.cpp
#        grid_test/Repro.cpp
#        grid_test/Grid.cpp
#        grid_test/Grid.h
#)

#add_executable(test
#        src/test.cpp
#        src/lattice.h
#        src/energy.h
#        src/magnetization.h
#        src/io.cpp
#        src/io.h
#)

